--- a/wc6/csstransitions exercises/exercise2/style.css
+++ b/wc6/csstransitions exercises/exercise2/style.css
@@ -25,3 +25,14 @@ a {
     padding: 20px 40px;
     color: #E1332D; 
 }
+
+a:hover{
+    border: 10px solid #E1332D;
+    padding: 20px 40px;
+    padding: 3% 8%;
+    font-size: 80px;
+    transition-property: border;
+    transition-delay: 2s;
+    transition-duration: 1s;
+    transition-timing-function: ease-in-out;
+}
